--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -6,6 +6,21 @@
     <title>Koding Core</title>
 </head>
 <body>
-    
+    <?php
+    if(isset($_SESSION["user"]))
+    {
+        require "views/roles-templates/user/connected/_header.phtml";
+    }
+    else if(isset($_SESSION["admin"]))
+    {
+        require "views/roles-templates/admin/_header.phtml";
+    }
+    else
+    {
+        require "views/roles-templates/user/guest/_header.phtml";
+    }
+
+    require $this->template;
+    ?>
 </body>
 </html>
