--- a/views/roles-templates/admin/_header.phtml
+++ b/views/roles-templates/admin/_header.phtml
@@ -1,9 +1,10 @@
 <header>
     <nav>
         <ul>
-            <li><a href="index.php?route="">Homepage</a></li>
-            <li><a href="index.php?route="login">Login</a></li>
-            <li><a href="index.php?route="register">Register</a></li>
+            <li><a href="index.php?route=">Homepage</a></li>
+            <li><a href="index.php?route=shop-window">Shop window</a></li>
+            <li><a href="index.php?route=control-board">Control-board</a></li>
+            <li><a href="index.php?route=disconnect">Disconnect</a></li>
         </ul>
     </nav>
 </header>
