--- a/views/roles-templates/user/connected/_header.phtml
+++ b/views/roles-templates/user/connected/_header.phtml
@@ -1,10 +1,10 @@
 <header>
     <nav>
         <ul>
-            <li><a href="index.php?route="">Homepage</a></li>
-            <li><a href="index.php?route="shop-window">Shop window</a></li>
-            <li><a href="index.php?route="login">My account</a></li>
-            <li><a href="index.php?route="register">Disconnect</a></li>
+            <li><a href="index.php?route=">Homepage</a></li>
+            <li><a href="index.php?route=shop-window">Shop window</a></li>
+            <li><a href="index.php?route=account">My account</a></li>
+            <li><a href="index.php?route=disconnect">Disconnect</a></li>
         </ul>
     </nav>
 </header>
