add somes changes

--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -7,32 +7,33 @@
 </head>
 <body>
     <?php
-    if(isset($_SESSION["user_id"]))
+    if(isset($_SESSION["user_id"])) //Si une session à été ouverte et la viriable "user_id" est défini
     {
-        if(isset($_SESSION["role"]))
+        if(isset($_SESSION["role"])) //Si on lui à attribué un role
         {
-            if($_SESSION["role"] === "admin")
+            if($_SESSION["role"] === "admin") //Si il à le role d'aministrateur
             {
-                require "views/roles-templates/admin/_header.phtml";
+                require "views/roles-templates/admin/_header.phtml"; //On charge le header admin
             }
-            else if($_SESSION["role"] === "user")
+            else if($_SESSION["role"] === "user") //Si il à le role utilisateur
             {
-                require "views/roles-templates/user/connected/_header.phtml";
+                require "views/roles-templates/user/connected/_header.phtml"; //On charge le header user
             }
             
         }
-        else
+        else //Si aucun role n'est défini
         {
-            require "views/roles-templates/user/connected/_header.phtml";
+            require "views/roles-templates/user/connected/_header.phtml"; //On charge le header user
         }
         
     }
-    else
+    else //Si aucune session n'est ouverte
     {
-        require "views/roles-templates/user/guest/_header.phtml";
+        require "views/roles-templates/user/guest/_header.phtml"; //On require le header guest
     }
 
-        require $this->template;
+    require $this->template; // require du template en cours
+
     ?>
 </body>
 </html>
