--- a/views/user/register.phtml
+++ b/views/user/register.phtml
@@ -1,5 +1,5 @@
 <main>
-    <form action="index.php?route=register" method="POST">
+    <form action="index.php?route=register" method="POST"> //Formulaire d'inscription
         <label for="username">Username</label>
         <input type="text" name="username" id="username">
         <label for="email">Email</label>
