--- a/views/user/account.phtml
+++ b/views/user/account.phtml
@@ -1,14 +1,14 @@
 <main>
     <aside id="nav-lateral">
         <ul>
-            <li></li>
+            <li><a href="edit-profil">Edit profil</a></li>
             <li></li>
             <li></li>
         </ul>
     </aside>
-    <section>
+    <section id="edit-profil">
         <h2>Profil</h2>
-        <form action="index.php?route=account" method="POST">
+        <form action="index.php?route=account" method="POST"> //Formulaire d'édition du profil (tbale users et infos)
             <label for="username">Username</label>
             <input type="text" id="username" name="username" placeholder="<?=$this->data["user"]->getUsername();?>">
 
@@ -19,25 +19,25 @@
             <input type="password" name="password" id="password">
 
             <label for="first_name">First name</label>
-            <input type="text" id="first_name" name="first_name" placeholder="<?php if(isset($this->data["info"])){ $this->data["info"]->getFirstName(); } ?>">
+            <input type="text" id="first_name" name="first_name" placeholder="<?php if(isset($this->data["info"])){ echo $this->data["info"]->getFirstName(); } ?>">
 
             <label for="last_name">Last name</label>
-            <input type="text" id="last_name" name="last_name" placeholder="<?php if(isset($this->data["info"])){ $this->data["info"]->getLastName(); } ?>">
+            <input type="text" id="last_name" name="last_name" placeholder="<?php if(isset($this->data["info"])){ echo $this->data["info"]->getLastName(); } ?>">
 
-            <label for="phone_number">Last name</label>
-            <input type="tel" id="phone_number" name="phone_number" placeholder="<?php if(isset($this->data["info"])){ $this->data["info"]->getPhoneNumber(); } ?>">
+            <label for="phone_number">Phone number</label>
+            <input type="tel" id="phone_number" name="phone_number" placeholder="<?php if(isset($this->data["info"])){ echo $this->data["info"]->getPhoneNumber(); } ?>">
 
             <label for="address">Address</label>
-            <input type="text" id="address" name="address" placeholder="<?php if(isset($this->data["info"])){ $this->data["info"]->getAddress(); } ?>">
+            <input type="text" id="address" name="address" placeholder="<?php if(isset($this->data["info"])){ echo $this->data["info"]->getAddress(); } ?>">
 
             <label for="town">Town</label>
-            <input type="text" id="town" name="town" placeholder="<?php if(isset($this->data["info"])){ $this->data["info"]->getTown(); } ?>">
+            <input type="text" id="town" name="town" placeholder="<?php if(isset($this->data["info"])){ echo $this->data["info"]->getTown(); } ?>">
 
             <label for="zip">Zip</label>
-            <input type="number" id="zip" name="zip" placeholder="<?php if(isset($this->data["info"])){ $this->data["info"]->getZip(); } ?>">
+            <input type="number" id="zip" name="zip" placeholder="<?php if(isset($this->data["info"])){ echo $this->data["info"]->getZip(); } ?>">
 
             <label for="country">Country</label>
-            <input type="text" id="country" name="country" placeholder="<?php if(isset($this->data["info"])){ $this->data["info"]->getCountry(); } ?>">
+            <input type="text" id="country" name="country" placeholder="<?php if(isset($this->data["info"])){ echo $this->data["info"]->getCountry(); } ?>">
             
             <input type="submit" name="submit" value="Save profil">
         </form>
