--- a/views/roles-templates/user/connected/_header.phtml
+++ b/views/roles-templates/user/connected/_header.phtml
@@ -1,7 +1,8 @@
-<header>
+<header class="lightmode" role="banner">
     <nav>
         <ul>
             <li><a href="index.php?route=">Homepage</a></li>
+            <!-- <li><a href="#">Porte folio</a></li> -->
             <li><a href="index.php?route=shop-window">Shop window</a></li>
             <li><a href="index.php?route=account">My account</a></li>
             <li><a href="index.php?route=disconnect">Disconnect</a></li>
