--- a/views/roles-templates/user/guest/_header.phtml
+++ b/views/roles-templates/user/guest/_header.phtml
@@ -1,7 +1,8 @@
-<header>
+<header class="lightmode" role="banner">
     <nav>
         <ul>
-            <li><a href="index.php?route="">Homepage</a></li>
+            <li><a href="index.php?route=">Homepage</a></li>
+            <!-- <li><a href="#">Porte folio</a></li> -->
             <li><a href="index.php?route=login">Login</a></li>
             <li><a href="index.php?route=register">Register</a></li>
         </ul>
