--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -3,23 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="assets/styles/css/reset.css">   -->
-    <link rel="stylesheet" href="assets/styles/css/revenge.css">    
+    <!-- <link rel="stylesheet" href="assets/styles/css/reset.css"> -->
+    <!-- <link rel="stylesheet" href="assets/styles/css/revenge.css"> -->
     <link rel="stylesheet" href="assets/styles/css/style.css">    
     <title>Koding Core</title>
 </head>
 <body class="lightmode">
+    <div id="general">
     <?php
     if(isset($_SESSION["user_id"])) //Si une session à été ouverte et la viriable "user_id" est défini
     {
         if(isset($_SESSION["role"])) //Si on lui à attribué un role
         {
             
-            if($_SESSION["role"] === "admin") //Si il à le role d'aministrateur
+            if($_SESSION["role"] === 1) //Si il à le role d'aministrateur
             {
                 require "views/roles-templates/admin/_header.phtml"; //On charge le header admin
             }
-            else if($_SESSION["role"] === "user") //Si il à le role utilisateur
+            else if($_SESSION["role"] === 0) //Si il à le role utilisateur
             {
                 require "views/roles-templates/user/connected/_header.phtml"; //On charge le header user
             }
@@ -39,5 +40,6 @@
     require $this->template; // require du template en cours
 
     ?>
+    </div> 
 </body>
 </html>
