--- a/views/roles-templates/user/connected/_header.phtml
+++ b/views/roles-templates/user/connected/_header.phtml
@@ -1,4 +1,7 @@
 <header class="lightmode" role="banner">
+    <div id="logo-kc">
+        <img src="https://i.goopics.net/cygi2i.png" width="80" alt="">
+    </div>
     <nav>
         <ul>
             <li><a href="index.php?route=">Homepage</a></li>
