--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -10,18 +10,22 @@ $primary-dark: #343357;
 $secondary-dark: #201320;
 $accent-dark: #9f9fc6;
 
+.advert{
+    color: red;
+}
+.lightmode{
+    background: $background-light;
+    color: $text-light;
+}
+.darkmode{
+    background: $background-dark;
+    color: $text-dark;
+}
 
 html
 {
     scroll-behavior: smooth;
-    .lightmode{
-        background: $background-light;
-        color: $text-light;
-    }
-    .darkmode{
-        background: $background-dark;
-        color: $text-dark;
-    }
+    
     body
     {
         header
