--- a/views/user/account.phtml
+++ b/views/user/account.phtml
@@ -7,38 +7,129 @@
     </aside>
     <section id="edit-profil">
         <h2>Profil</h2>
-        <form action="index.php?route=account" method="POST"> <?php //Formulaire d'édition du profil (tbale users et infos)?>
-            <label for="username">Username</label>
-            <input type="text" id="username" name="username" placeholder="<?=$this->data["user"]->getUsername();?>">
+        <form action="index.php?route=account" method="POST"> <!-- Formulaire d'édition du profil (tbale users et infos) -->
+            <label for="username">Username</label> 
+            <?php 
+                if(isset($this->data["champ"]))
+                {
+                    if($this->data["champ"] === "username")
+                    {
+                        ?><span class="advert"><?=$this->data["message"]?></span><?php
+                    }
+                }
+            ?>
+            <input maxlength="50" type="text" id="username" name="username" placeholder="<?=$this->data["user"]->getUsername();?>">
 
             <label for="email">Email</label>
-            <input type="email" name="email" placeholder="<?=$this->data["user"]->getEmail();?>">
+            <?php 
+                if(isset($this->data["champ"]))
+                {
+                    if($this->data["champ"] === "email")
+                    {
+                        ?><span class="advert"><?=$this->data["message"]?></span><?php
+                    }
+                }
+            ?>
+            <input maxlength="50" type="email" name="email" placeholder="<?=$this->data["user"]->getEmail();?>">
 
             <label for="password">Password</label>
-            <input type="password" name="password" id="password">
+            <?php 
+                if(isset($this->data["champ"]))
+                {
+                    if($this->data["champ"] === "password")
+                    {
+                        ?><span class="advert"><?=$this->data["message"]?></span><?php
+                    }
+                }
+            ?>
+            <input maxlength="50" type="password" name="password" id="password">
+
             <label for="confirm-password">Confirm password</label>
             <input type="password" name="confirm-password" id="confirm-password">
 
             <label for="first_name">First name</label>
-            <input type="text" id="first_name" name="first_name" placeholder="<?php if(isset($this->data["info"])){ echo $this->data["info"]->getFirstName(); } ?>">
+            <?php 
+                if(isset($this->data["champ"]))
+                {
+                    if($this->data["champ"] === "first_name")
+                    {
+                        ?><span class="advert"><?=$this->data["message"]?></span><?php
+                    }
+                }
+            ?>
+            <input maxlength="50" type="text" id="first_name" name="first_name" placeholder="<?php if(isset($this->data["info"])){ echo $this->data["info"]->getFirstName(); } ?>">
 
             <label for="last_name">Last name</label>
-            <input type="text" id="last_name" name="last_name" placeholder="<?php if(isset($this->data["info"])){ echo $this->data["info"]->getLastName(); } ?>">
+            <?php 
+                if(isset($this->data["champ"]))
+                {
+                    if($this->data["champ"] === "last_name")
+                    {
+                        ?><span class="advert"><?=$this->data["message"]?></span><?php
+                    }
+                }
+            ?>
+            <input maxlength="50" type="text" id="last_name" name="last_name" placeholder="<?php if(isset($this->data["info"])){ echo $this->data["info"]->getLastName(); } ?>">
 
             <label for="phone_number">Phone number</label>
-            <input type="tel" id="phone_number" name="phone_number" placeholder="<?php if(isset($this->data["info"])){ echo $this->data["info"]->getPhoneNumber(); } ?>">
+            <?php 
+                if(isset($this->data["champ"]))
+                {
+                    if($this->data["champ"] === "phone_number")
+                    {
+                        ?><span class="advert"><?=$this->data["message"]?></span><?php
+                    }
+                }  
+            ?>
+            <input maxlength="50" type="tel" id="phone_number" name="phone_number" placeholder="<?php if(isset($this->data["info"])){ echo $this->data["info"]->getPhoneNumber(); } ?>">
 
             <label for="address">Address</label>
-            <input type="text" id="address" name="address" placeholder="<?php if(isset($this->data["info"])){ echo $this->data["info"]->getAddress(); } ?>">
+            <?php 
+                if(isset($this->data["champ"]))
+                {
+                    if($this->data["champ"] === "address")
+                    {
+                        ?><span class="advert"><?=$this->data["message"]?></span><?php
+                    }
+                }
+            ?>
+            <input maxlength="50" type="text" id="address" name="address" placeholder="<?php if(isset($this->data["info"])){ echo $this->data["info"]->getAddress(); } ?>">
 
             <label for="town">Town</label>
-            <input type="text" id="town" name="town" placeholder="<?php if(isset($this->data["info"])){ echo $this->data["info"]->getTown(); } ?>">
+            <?php 
+                if(isset($this->data["champ"]))
+                {
+                    if($this->data["champ"] === "town")
+                    {
+                        ?><span class="advert"><?=$this->data["message"]?></span><?php
+                    }
+                }
+            ?>
+            <input maxlength="50" type="text" id="town" name="town" placeholder="<?php if(isset($this->data["info"])){ echo $this->data["info"]->getTown(); } ?>">
 
             <label for="zip">Zip</label>
-            <input type="number" id="zip" name="zip" placeholder="<?php if(isset($this->data["info"])){ echo $this->data["info"]->getZip(); } ?>">
+            <?php 
+                if(isset($this->data["champ"]))
+                {
+                    if($this->data["champ"] === "zip")
+                    {
+                        ?><span class="advert"><?=$this->data["message"]?></span><?php
+                    }
+                }
+            ?>
+            <input maxlength="50" type="number" id="zip" name="zip" placeholder="<?php if(isset($this->data["info"])){ echo $this->data["info"]->getZip(); } ?>">
 
             <label for="country">Country</label>
-            <input type="text" id="country" name="country" placeholder="<?php if(isset($this->data["info"])){ echo $this->data["info"]->getCountry(); } ?>">
+            <?php 
+                if(isset($this->data["champ"]))
+                {
+                    if($this->data["champ"] === "country")
+                    {
+                        ?><span class="advert"><?=$this->data["message"]?></span><?php
+                    }
+                }
+            ?>
+            <input maxlength="50" type="text" id="country" name="country" placeholder="<?php if(isset($this->data["info"])){ echo $this->data["info"]->getCountry(); } ?>">
             
             <input type="submit" name="submit" value="Save profil">
         </form>
