--- a/views/user/account.phtml
+++ b/views/user/account.phtml
@@ -1,4 +1,4 @@
-<main>
+<main id="content">
     <aside id="nav-lateral">
         <ul>
             <li><a href="#edit-profil">Edit profil</a></li>
