--- a/views/user/login.phtml
+++ b/views/user/login.phtml
@@ -1,4 +1,4 @@
-<main>
+<main id="content">
     <section>
         <?php
             if(isset($this->data["message"])) //Si l'on à un message dans la data
