--- a/views/user/register.phtml
+++ b/views/user/register.phtml
@@ -10,13 +10,33 @@
         ?>
         <form action="index.php?route=register" method="POST"> <?php //Formulaire d'inscription ?>
             <label for="username">Username</label>
-            <input type="text" name="username" id="username" required>
+            <input type="text" name="username" id="username" required maxlength="50" onpaste="return false;">
+            <span class="error" aria-live="polite"></span>
+
+            <label for="first_name">First name</label>
+            <input type="text" name="first_name" id="first_name" required maxlength="50" onpaste="return false;">
+            <span class="error" aria-live="polite"></span>
+
+            <label for="last_name">Last name</label>
+            <input type="text" name="last_name" id="last_name" required maxlength="50" onpaste="return false;">
+            <span class="error" aria-live="polite"></span>
+
             <label for="email">Email</label>
-            <input type="email" name="email" id="email" required>
+            <input type="email" name="email" id="email" required maxlength="100" onpaste="return false;">
+            <span class="error" aria-live="polite"></span>
+
+            <label for="tel">Téléphone</label>
+            <input type="tel" name="tel" id="tel" required maxlength="15" pattern="[0-9]{2}[0-9]{2}[0-9]{2}[0-9]{2}[0-9]{2}" onpaste="return false;">
+            <span class="error" aria-live="polite"></span>
+
             <label for="password">Password</label>
-            <input type="password" name="password" id="password" required>
+            <input type="password" name="password" id="password" required minlength="8" maxlength="50" onpaste="return false;">
+            <span class="error" aria-live="polite"></span>
+
             <label for="confirm-password">Confirm password</label>
-            <input type="password" name="confirm-password" id="confirm-password" required>
+            <input type="password" name="confirm-password" id="confirm-password" required minlength="8" maxlength="50" onpaste="return false;">
+            <span class="error" aria-live="polite"></span>
+            
             <input type="submit" value="Register">
         </form>
     </section>
