mise en place du layout

--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -14,7 +14,10 @@
 </head>
 <body>
     <header>
-        
-    </header>  
+        <div id="top-header">
+            <div class="logo"></div>
+        </div>
+    </header>
+    
 </body>
 </html>
