--- a/views/admin/_navlist.phtml
+++ b/views/admin/_navlist.phtml
@@ -1,7 +1,7 @@
 <ul class="navlist">
-    <li><a href="index.php/?route=''">Homepage</a></li>
-    <li><a href="index.php/?route='shop'">Vitrine</a></li>
-    <li><a href="index.php/?route='dashboard'">Panneau de control</a></li>
-    <li><a href="index.php/?route='contact'">Contactez moi</a></li>
-    <li><a href="index.php/?route='disconnect'">Se déconnecter</a></li>
+    <li><a href="index.php">Page d'accueil</a></li>
+    <li><a href="index.php?route=shop">Vitrine</a></li>
+    <li><a href="index.php?route=dashboard">Panneau de control</a></li>
+    <li><a href="index.php?route=contact">Contactez moi</a></li>
+    <li><a href="index.php?route=disconnect">Se déconnecter</a></li>
 </ul>
