--- a/views/guest/_navlist.phtml
+++ b/views/guest/_navlist.phtml
@@ -1,5 +1,5 @@
 <ul class="navlist">
-    <li><a href="index.php/?route=''">Homepage</a></li>
-    <li><a href="index.php/?route='login'">Se connecter</a></li>
-    <li><a href="index.php/?route='register'">S'enrégistrer</a></li>
+    <li><a href="index.php">Page d'accueil</a></li>
+    <li><a href="index.php?route=login">Se connecter</a></li>
+    <li><a href="index.php?route=register">S'enrégistrer</a></li>
 </ul>
