--- a/views/guest/login.phtml
+++ b/views/guest/login.phtml
@@ -6,9 +6,10 @@
         <?php
     }
 ?>
+<h1>Connexion</h1>
 <form action="index.php?route=login" method="POST">
     <label for="username_email">Username / Email</label>
-    <input type="text" name="username_email" id="username_email" required maxlength="100" onpaste="return false;">
+    <input type="text" name="username_email" id="username_email" required maxlength="50" onpaste="return false;">
 
     <label for="password">Password</label>
     <input type="password" name="password" id="password" required maxlength="50" onpaste="return false;">
