--- a/views/homepage.phtml
+++ b/views/homepage.phtml
@@ -1,13 +1,1 @@
-<main>
-    <header>
-        <nav>
-            
-        </nav>
-        <aside>
-            
-        </aside>
-        <div class="container">
-
-        </div>
-    </header>
-</main>
+<h1>Homepage</h1>
