--- a/views/user/account.phtml
+++ b/views/user/account.phtml
@@ -17,10 +17,10 @@
 <h1>Mon compte</h1>
 <form action="index.php?route=account" method="POST">
     <label for="username">Username</label>
-    <input type="text" name="username" id="username" placeholder=<?=$user->getUsername();?> maxlength="50" onpaste="return false;">
+    <input type="text" name="username" id="username" value=<?=$user->getUsername(); ?> maxlength="50" onpaste="return false;">
 
     <label for="email">Email</label>
-    <input type="email" name="email" id="email" placeholder=<?=$user->getEmail();?> maxlength="50" onpaste="return false;">
+    <input type="email" name="email" id="email" value=<?=$user->getEmail(); ?> maxlength="50" onpaste="return false;">
 
     <label for="password">Password</label>
     <input type="password" name="password" id="password" minlength="8" maxlength="50" onpaste="return false;">
@@ -29,13 +29,88 @@
     <input type="password" name="confirm_password" id="confirm_password" minlength="8" maxlength="50" onpaste="return false;">
 
     <label for="first_name">Prénom</label>
-    <input type="text" name="first_name" id="first_name" placeholder=<?=$info->getFirstName();?> maxlength="50" onpaste="return false;">
+    <input type="text" name="first_name" id="first_name" 
+    <?php 
+        if(!$info->getFirstName())
+        {
+            ?> placeholder= <?="Votre prénom";
+        }
+        else
+        {
+            ?> value= <?=$info->getFirstName();
+        }
+    ?> 
+    maxlength="50" onpaste="return false;">
 
     <label for="last_name">Nom</label>
-    <input type="text" name="last_name" id="last_name" placeholder=<?=$info->getLastName();?> maxlength="50" onpaste="return false;">
+    <input type="text" name="last_name" id="last_name"
+    <?php 
+        if(!$info->getLastName())
+        {
+            ?> placeholder= <?="Votre nom";
+        }
+        else
+        {
+            ?> value= <?=$info->getLastName();
+        }
+    ?> 
+    maxlength="50" onpaste="return false;">
 
     <label for="tel">Téléphone</label>
-    <input type="text" name="tel" id="tel" placeholder=<?=$info->getTel();?> maxlength="15" onpaste="return false;">
+    <input type="text" name="tel" id="tel"
+    <?php 
+        if(!$info->getTel())
+        {
+            ?> placeholder= <?="XXXXXXXXXX";
+        }
+        else
+        {
+            ?> value= <?=$info->getTel();
+        }
+    ?>
+    maxlength="15" onpaste="return false;">
+
+    <label for="address">Address</label>
+    <input type="text" name="address" id="address"
+    <?php 
+        if(!$info->getAddress())
+        {
+            ?> placeholder= <?="Votre adresse";
+        }
+        else
+        {
+            ?> value= <?=$info->getAddress();
+        }
+    ?>
+    maxlength="255" onpaste="return false;">
+
+    <label for="zip">Code Postal</label>
+    <input type="text" name="zip" id="zip"
+    <?php 
+        if(!$info->getZip())
+        {
+            ?> placeholder= <?="XXXXX";
+        }
+        else
+        {
+            ?> value= <?=$info->getZip();
+        }
+    ?>
+    maxlength="15" onpaste="return false;">
+
+    <label for="city">Ville</label>
+    <input type="text" name="city" id="city"
+    <?php 
+        if(!$info->getCity())
+        {
+            ?> placeholder= <?="Votre ville";
+        }
+        else
+        {
+            ?> value= <?=$info->getCity();
+        }
+    ?>
+    maxlength="100" onpaste="return false;">
     
     <input type="submit" value="Editer mon profil">
 </form>
