--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KodingCore Developpement</title>
     <link rel="icon" type="image/png" href="https://i.goopics.net/wovpgb.png">
+    <link rel="stylesheet" href="assets/styles/css/style.css">
 </head>
 <body>
     <header>
@@ -38,6 +39,6 @@
         ?>
         </section>
     </main>
-    
+    <script type="module" src="assets/js/index.js"></script>
 </body>
 </html>
