--- a/views/guest/login.phtml
+++ b/views/guest/login.phtml
@@ -1,3 +1,4 @@
+<h1>Connexion</h1>
 <?php
     if(isset($this->data["message"])) //*Si on à un message dans la data
     {
@@ -6,8 +7,7 @@
         <?php
     }
 ?>
-<h1>Connexion</h1>
-<form action="index.php?route=login" method="POST">
+<form action="index.php?route=login" method="POST" id="login_form">
     <label for="username_email">Username / Email</label>
     <input type="text" name="username_email" id="username_email" required maxlength="50" onpaste="return false;">
 
