--- a/views/guest/register.phtml
+++ b/views/guest/register.phtml
@@ -7,12 +7,12 @@
     }
 ?>
 <h1>Créer un compte</h1>
-<form action="index.php?route=register" method="POST">
+<form action="index.php?route=register" method="POST" id="register_form">
     <label for="username">Username</label>
     <input type="text" name="username" id="username" required maxlength="50" onpaste="return false;">
 
     <label for="email">Email</label>
-    <input type="email" name="email" id="email" required maxlength="50" onpaste="return false;">
+    <input type="email" name="email" id="email" value="a" required maxlength="50" onpaste="return false;">
 
     <label for="password">Password</label>
     <input type="password" name="password" id="password" required minlength="8" maxlength="50" onpaste="return false;">
