--- a/views/user/account.phtml
+++ b/views/user/account.phtml
@@ -15,7 +15,7 @@
     }
 ?>
 <h1>Mon compte</h1>
-<form action="index.php?route=account" method="POST">
+<form action="index.php?route=account" method="POST" id="account_form">
     <label for="username">Username</label>
     <input type="text" name="username" id="username" value=<?=$user->getUsername(); ?> maxlength="50" onpaste="return false;">
 
