templates vides en cours de création / fin (arbo)

--- a/views/guest/register.phtml
+++ b/views/guest/register.phtml
@@ -12,7 +12,7 @@
     <input type="text" name="username" id="username" required maxlength="50" onpaste="return false;">
 
     <label for="email">Email</label>
-    <input type="email" name="email" id="email" value="a" required maxlength="50" onpaste="return false;">
+    <input type="email" name="email" id="email" required maxlength="50" onpaste="return false;">
 
     <label for="password">Password</label>
     <input type="password" name="password" id="password" required minlength="8" maxlength="50" onpaste="return false;">
