--- a/views/guest/register.phtml
+++ b/views/guest/register.phtml
@@ -6,23 +6,26 @@
         <?php
     }
 ?>
-<h1>Créer un compte</h1>
-<form action="index.php?route=register" method="POST" id="register_form">
-    <label for="username">Username</label>
-    <input type="text" name="username" id="username" required maxlength="50" onpaste="return false;">
-    <span id="error_username"></span>
+<main id="container">
+    <h1>Créer un compte</h1>
+    <form action="index.php?route=register" method="POST" id="register_form">
+        <label for="username">Username</label>
+        <input type="text" name="username" id="username" autocomplete="username" required maxlength="50" onpaste="return false;">
+        <span id="error_username"></span>
 
-    <label for="email">Email</label>
-    <input type="email" name="email" id="email" required maxlength="50" onpaste="return false;">
-    <span id="error_email"></span>
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email" autocomplete="email" required maxlength="50" onpaste="return false;">
+        <span id="error_email"></span>
 
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" required minlength="8" onpaste="return false;">
-    <span id="error_password"></span>
+        <label for="password">Password</label>
+        <input type="password" name="password" id="password" autocomplete="new-password" required minlength="8" onpaste="return false;">
+        <span id="error_password"></span>
 
-    <label for="confirm_password">Confirm password</label>
-    <input type="password" name="confirm_password" id="confirm_password" required minlength="8" onpaste="return false;">
-    <span id="error_confirm_password"></span>
-    
-    <input type="submit" value="Register">
-</form>
+        <label for="confirm_password">Confirm password</label>
+        <input type="password" name="confirm_password" id="confirm_password" autocomplete="new-password" required minlength="8" onpaste="return false;">
+        <span id="error_confirm_password"></span>
+
+        <input type="submit" value="Register">
+    </form>
+</main>
+<script type="module" src="assets/js/index.js"></script>
