--- a/views/guest/login.phtml
+++ b/views/guest/login.phtml
@@ -1,4 +1,4 @@
-<h1>Connexion</h1>
+
 <?php
     if(isset($this->data["message"])) //*Si on à un message dans la data
     {
@@ -7,12 +7,15 @@
         <?php
     }
 ?>
-<form action="index.php?route=login" method="POST" id="login_form">
-    <label for="username_email">Username / Email</label>
-    <input type="text" name="username_email" id="username_email" required maxlength="50" onpaste="return false;">
+<main id="container">
+    <h1>Connexion</h1>
+    <form action="index.php?route=login" method="POST" id="login_form">
+        <label for="username_email">Username / Email</label>
+        <input type="text" name="username_email" id="username_email" autocomplete="username" required maxlength="50" onpaste="return false;">
 
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" required maxlength="50" onpaste="return false;">
+        <label for="password">Password</label>
+        <input type="password" name="password" id="password" autocomplete="current-password" required maxlength="50" onpaste="return false;">
 
-    <input type="submit" value="Login">
-</form>
+        <input type="submit" value="Login">
+    </form>
+</main>
