--- a/views/user/account.phtml
+++ b/views/user/account.phtml
@@ -19,15 +19,19 @@
     <form action="index.php?route=account" method="POST" id="account_form">
         <label for="username">Username</label>
         <input type="text" name="username" id="username" value=<?=$user->getUsername(); ?> maxlength="50" onpaste="return false;">
+        <span id="error_username"></span>
 
         <label for="email">Email</label>
         <input type="email" name="email" id="email" value=<?=$user->getEmail(); ?> maxlength="50" onpaste="return false;">
+        <span id="error_email"></span>
 
         <label for="password">Password</label>
         <input type="password" name="password" id="password" minlength="8" maxlength="50" onpaste="return false;">
+        <span id="error_password"></span>
 
         <label for="confirm_password">Confirm password</label>
         <input type="password" name="confirm_password" id="confirm_password" minlength="8" maxlength="50" onpaste="return false;">
+        <span id="error_confirm_password"></span>
 
         <label for="first_name">Prénom</label>
         <input type="text" name="first_name" id="first_name" 
@@ -56,6 +60,7 @@
             }
         ?> 
         maxlength="50" onpaste="return false;">
+        <span id="error_first_name"></span>
 
         <label for="tel">Téléphone</label>
         <input type="text" name="tel" id="tel"
@@ -69,7 +74,7 @@
                 echo 'value="' . $info->getTel() . '"';
             }
         ?>
-        maxlength="15" onpaste="return false;">
+        maxlength="10" onpaste="return false;">
 
         <label for="address">Address</label>
         <input type="text" name="address" id="address"
@@ -84,6 +89,7 @@
             }
         ?>
         maxlength="255" onpaste="return false;">
+        <span id="error_tel"></span>
 
         <label for="zip">Code Postal</label>
         <input type="text" name="zip" id="zip"
@@ -116,3 +122,4 @@
         <input type="submit" value="Editer mon profil">
     </form>
 </main>
+<script type="module" src="assets/js/account.js"></script>
