--- a/views/user/account.phtml
+++ b/views/user/account.phtml
@@ -96,7 +96,7 @@
         <?php 
             if(!$info->getZip())
             {
-                echo 'placeholder="xxxxx"';
+                echo 'placeholder="Votre code postal"';
             }
             else
             {
